kubernetes-manifests/monitoring/mcp-grafana/mcp-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-grafana
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: mcp-grafana.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcp-grafana
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`mcp-grafana.dtlp.cc`)
      services:
        - name: mcp-grafana
          kind: Service
          port: 8000
          sticky:
            cookie: {}
  tls: {}
